@@ -1,5 +1,10 @@
 2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* stk500v2.c (stk500v2_set_sck_period): Revamp this to match the
+	description/pseudo-code in appnote AVR068.
+
+2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Stephen Roe:
 	patch #7710: usb_libusb: Check VID/PID before opening device
 	* usb_libusb.c (usbdev_open): Swap the sequence of verifying the
